# develop_assist

./: .gitignore  2026-06-28-hilog-agent-design.md  AGENTS.md  README.md  REASONIX.md  build.spec  pyproject.toml
.reasonix/truncated-results/: 1782637077526-ade927ef-run_command.txt
docs/reasonix/plans/: 2026-06-28-hilog-agent-mvp.md
fixtures/: agent.yaml
fixtures/features/camera_capture/: feature.yaml
fixtures/features/camera_capture/modules/: camera_ui.yaml
fixtures/logs/: sample.hilog
frontend/: app.py  chat.html  main.py
prompts/: feature_update.md  module_generation.md
src/hilog_agent/: __init__.py  cli.py  config.py  diff_safety.py  logging.py  orchestrator.py  scoring.py  server.py  store.py
src/hilog_agent/commands/: add_module.py  analyze_log.py  ask.py
src/hilog_agent/hilog/: __init__.py  matcher.py  parser.py
src/hilog_agent/llm/: __init__.py  client.py  validator.py
src/hilog_agent/models/: __init__.py  evidence.py  feature.py  module.py  result.py
src/hilog_agent/prompts/: __init__.py  loader.py
src/hilog_agent/renderers/: __init__.py  json_renderer.py  text.py
tests/: __init__.py  conftest.py  test_cli_add_module.py  test_cli_analyze_log.py  test_cli_ask.py  test_config.py  test_diff_safety.py  test_llm_client.py  test_llm_validator.py  test_matcher.py  test_orchestrator.py  test_parser.py  test_prompt_loader.py  test_renderers.py  test_scoring.py  test_server.py  test_store.py
tests/test_schemas/: test_evidence.py  test_feature.py  test_module.py
