[project]
name = "hilog-agent"
version = "0.1.0"
description = "Hilog Agent MVP — feature Q&A, log analysis, and module knowledge generation"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "openai>=1.0",
    "httpx>=0.25",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
    "PyQt6>=6.5",
    "PyQt6-WebEngine>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.0",
]

[project.scripts]
agent = "hilog_agent.cli:main"
hilog-gui = "frontend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
